adding new files

--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>dev</td><td>GroupTest.dev3()[pri:2, instance:com.test.tests.GroupTest@1ab06251]<br/>GroupTest.dev1()[pri:0, instance:com.test.tests.GroupTest@1ab06251]<br/>GroupTest.dev2()[pri:1, instance:com.test.tests.GroupTest@1ab06251]<br/></td></tr>
-<tr><td>dev1</td><td>GroupTest.dev2()[pri:1, instance:com.test.tests.GroupTest@1ab06251]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
