--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,16 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test1</a></td><td class="num">1</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">66</td><td>dev1, dev</td><td>tests</td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">13,414</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.test.tests.GroupTest</td><td><a href="#m0">dev2</a></td><td rowspan="1">1657555111911</td><td rowspan="1">4</td></tr><tr><th colspan="4">Test1 &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.test.tests.GroupTest</td><td><a href="#m1">dev3</a></td><td rowspan="1">1657555111919</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.test.tests.GroupTest</td><td><a href="#m2">dev1</a></td><td rowspan="1">1657555111884</td><td rowspan="1">13</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.test.tests.ThreadPoolSizeTest</td><td><a href="#m0">launchChrome</a></td><td rowspan="6">1659343555038</td><td rowspan="6">7010</td></tr><tr class="passedeven"><td><a href="#m1">launchChrome</a></td></tr><tr class="passedeven"><td><a href="#m2">launchChrome</a></td></tr><tr class="passedeven"><td><a href="#m3">launchChrome</a></td></tr><tr class="passedeven"><td><a href="#m4">launchChrome</a></td></tr><tr class="passedeven"><td><a href="#m5">launchChrome</a></td></tr></tbody>
 </table>
-<h2>Test1</h2><h3 id="m0">com.test.tests.GroupTest#dev2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
-	at com.test.tests.GroupTest.dev2(GroupTest.java:33)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.test.tests.GroupTest#dev3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method GroupTest.dev3()[pri:2, instance:com.test.tests.GroupTest@1ab06251] depends on not successfully finished methods in group &quot;dev1&quot;
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.test.tests.GroupTest#dev1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.test.tests.ThreadPoolSizeTest#launchChrome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.test.tests.ThreadPoolSizeTest#launchChrome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.test.tests.ThreadPoolSizeTest#launchChrome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.test.tests.ThreadPoolSizeTest#launchChrome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.test.tests.ThreadPoolSizeTest#launchChrome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.test.tests.ThreadPoolSizeTest#launchChrome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
