--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d4bf7e">  <td>22/06/24 23:02:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorldOMeter.worldOMeterTest()[pri:0, instance:com.test.tests.WorldOMeter@184ab05]">worldOMeterTest</td> 
-  <td>main@19258383</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/08/01 14:15:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPoolSizeTest.launchChrome()[pri:0, instance:com.test.tests.ThreadPoolSizeTest@71329995]">launchChrome</td> 
+  <td>TestNG-methods-3@1381935868</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/08/01 14:15:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPoolSizeTest.launchChrome()[pri:0, instance:com.test.tests.ThreadPoolSizeTest@71329995]">launchChrome</td> 
+  <td>TestNG-methods-1@1396091064</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/08/01 14:15:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPoolSizeTest.launchChrome()[pri:0, instance:com.test.tests.ThreadPoolSizeTest@71329995]">launchChrome</td> 
+  <td>TestNG-methods-2@341431147</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/08/01 14:16:02</td>   <td>7013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPoolSizeTest.launchChrome()[pri:0, instance:com.test.tests.ThreadPoolSizeTest@71329995]">launchChrome</td> 
+  <td>TestNG-methods-1@1396091064</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/08/01 14:16:02</td>   <td>7047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPoolSizeTest.launchChrome()[pri:0, instance:com.test.tests.ThreadPoolSizeTest@71329995]">launchChrome</td> 
+  <td>TestNG-methods-3@1381935868</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/08/01 14:16:02</td>   <td>7137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPoolSizeTest.launchChrome()[pri:0, instance:com.test.tests.ThreadPoolSizeTest@71329995]">launchChrome</td> 
+  <td>TestNG-methods-2@341431147</td>   <td></td> </tr>
 </table>
