--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbb77c">  <td>22/07/11 21:28:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.dev1()[pri:0, instance:com.test.tests.GroupTest@1ab06251]">dev1</td> 
-  <td>main@651100072</td>   <td></td> </tr>
-<tr bgcolor="bbb77c">  <td>22/07/11 21:28:31</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.dev2()[pri:1, instance:com.test.tests.GroupTest@1ab06251]">dev2</td> 
-  <td>main@651100072</td>   <td></td> </tr>
+<tr bgcolor="697186">  <td>22/07/16 23:40:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindPriceTest.findOption()[pri:0, instance:com.test.tests.FindPriceTest@1583741e]">findOption</td> 
+  <td>TestNG-tests-2@919951087</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/07/16 23:40:22</td>   <td>2445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindPriceTestFirefox.findOption()[pri:0, instance:com.test.tests.FindPriceTestFirefox@20ca951f]">findOption</td> 
+  <td>TestNG-tests-1@115820821</td>   <td></td> </tr>
+<tr bgcolor="697186">  <td>22/07/16 23:40:20</td>   <td>74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindPriceTest.findPrice()[pri:0, instance:com.test.tests.FindPriceTest@1583741e]">findPrice</td> 
+  <td>TestNG-tests-2@919951087</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/07/16 23:40:23</td>   <td>2500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindPriceTestFirefox.findPrice()[pri:0, instance:com.test.tests.FindPriceTestFirefox@20ca951f]">findPrice</td> 
+  <td>TestNG-tests-1@115820821</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/07/16 23:40:15</td>   <td>-5451</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FindPriceTestFirefox.setUp()[pri:0, instance:com.test.tests.FindPriceTestFirefox@20ca951f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@115820821</td>   <td></td> </tr>
+<tr bgcolor="697186">  <td>22/07/16 23:40:15</td>   <td>-5451</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FindPriceTest.setUp()[pri:0, instance:com.test.tests.FindPriceTest@1583741e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@919951087</td>   <td></td> </tr>
+<tr bgcolor="697186">  <td>22/07/16 23:40:20</td>   <td>140</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FindPriceTest.tearDown()[pri:0, instance:com.test.tests.FindPriceTest@1583741e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@919951087</td>   <td></td> </tr>
+<tr bgcolor="cbb08c">  <td>22/07/16 23:40:23</td>   <td>2519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FindPriceTestFirefox.tearDown()[pri:0, instance:com.test.tests.FindPriceTestFirefox@20ca951f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@115820821</td>   <td></td> </tr>
 </table>
